add edit quizz endpoint
